--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@ html {
   padding: 0%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: aqua;
+  background-color: aqua;
 }
 /* body {
-  align-items: center;
+  color: rgba(54, 136, 230, 0.822);
+
 } */
 .header {
   display: flex;
@@ -16,11 +19,14 @@ html {
   margin: 20px;
   border-style: solid;
   border-radius: 15px;
+  color: black;
+  background-color: white;
 }
 main {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  background-color: aqua;
 }
 .row1 {
   display: flex;
@@ -34,9 +40,12 @@ main {
   padding: 15px;
   margin: 15px;
   border-style: solid;
+  width: 500px;
   border-radius: 15px;
   overflow-x: hidden;
   text-size-adjust: inherit;
+  color: black;
+  background-color: white;
 }
 
 #searchInput {
@@ -68,6 +77,8 @@ main {
   width: 1500px;
   font-size: 40px;
   text-size-adjust: inherit;
+  color: black;
+  background-color: white;
 }
 .currentLocation {
   display: flex;
@@ -86,6 +97,8 @@ main {
   flex-direction: row;
   justify-content: space-around;
   height: auto;
+  color: black;
+  background-color: aqua;
 }
 .day {
   width: 20%;
@@ -94,6 +107,7 @@ main {
   border-radius: 15px;
   margin: 10px;
   padding: 10px;
+  background-color: white;
 }
 
 @media screen and (max-width: 480px) {
